# star-wars-rpg-character-manager

./: .dockerignore  .encryption_key  .env.docker  .env.example  .env.production  .env.template  .gitignore  01_generate_comprehensive_swrpg_data.py  01_generate_synthetic_swrpg_data.py  02_vectorize_synthetic_data.py  API_DOCUMENTATION.md  BUG_REPORT_20250610_170952.md  BUG_REPORT_20250610_171719.md  CHANGELOG.md  CLAUDE.md  COMPLETE_SPECIES_XP_CORRECTIONS.json  COMPREHENSIVE_BROWSER_TESTING_COMPLETED.md  COMPREHENSIVE_CROSS_BROWSER_E2E_REPORT.md  COMPREHENSIVE_SPECIES_VERIFICATION_RESULTS.json  DEPLOYMENT.md  Dockerfile  E2E_SECURITY_TEST_REPORT.md  GITHUB_ISSUES.md  GITHUB_ISSUES_DND_BEYOND_CHARACTER_CREATION.md  README.md  SECURITY.md  SPECIES_VERIFICATION_REPORT.md  UNRAID_INSTALLATION.md  V12_COMPLETION_REPORT.md  add_missing_species.py  admin_setup.py  analyze_ffg_species.py  apply_all_xp_corrections.py  build_complete_authoritative_database.py  build_comprehensive_database_all_sources.py  check_duplicates.py  check_users.py  cleanup_test_data.py  comprehensive_e2e_test.py  comprehensive_selenium_test.py  (+53 more)
character_data/: characters.json
comprehensive-persona-test-results/: comprehensive-test-report.html
docs/: API.md  README.md  SECURITY.md
e2e-role-based-screenshots/: multi-role-report.html
e2e-test-screenshots/: index.html
mcp-github-extended/: server.py
scripts/: release.sh
src/: __init__.py
swrpg_extracted_data/: FINAL_VERIFIED_SPECIES_DATABASE.json  OFFICIAL_SPECIES_DATABASE.json  verified_species_database.json
tests/: DOCKER-TESTING-README.md  (+73 more)
(+188 files in other folders)
